# glad

./: .gitignore  .mailmap  .travis.yml  CMakeLists.txt  Config.cmake.in  Jenkinsfile  MANIFEST.in  README.md  compiletest.sh  download.sh  generateall.sh  main.py  premake5.lua  requirements-test.txt  requirements.txt  setup.py  updatesub.sh
.github/workflows/: glad2.yaml
GL/: glad.c  glad.h
amp/egl/: egl.volt  enums.volt  ext.volt  funcs.volt  loader.volt  package.volt  types.volt
amp/gl/: enums.volt  ext.volt  funcs.volt  gl.volt  gles1.volt  gles2.volt  loader.volt  package.volt  types.volt
amp/gl/egl/: enums.volt  ext.volt  funcs.volt  loader.volt  package.volt  types.volt
amp/gl/gl/: enums.volt  ext.volt  funcs.volt  loader.volt  package.volt  types.volt
amp/gl/glx/: enums.volt  ext.volt  funcs.volt  loader.volt  package.volt  types.volt
amp/gl/wgl/: enums.volt  ext.volt  funcs.volt  loader.volt  package.volt  types.volt
amp/glx/: enums.volt  ext.volt  funcs.volt  glx.volt  loader.volt  package.volt  types.volt
amp/wgl/: enums.volt  ext.volt  funcs.volt  loader.volt  package.volt  types.volt  wgl.volt
cmake/: CMakeLists.txt  GladConfig.cmake  GladLoaderGenerator.cmake  WriteFile.cmake
example/c/: CMakeLists.txt  egl_gles2_glfw_emscripten.c  egl_glfw.c  egl_x11.c  gl_glfw.c  gl_glfw_on_demand.c  gl_sdl2.c  gles2_glfw_emscripten.c  glut.c  glx.c  glx_modern.c  simple.c  vulkan_tri_glfw.c  wgl.c
example/c++/: CMakeLists.txt  hellowindow2.cpp  hellowindow2_macro.cpp  hellowindow2_mx.cpp  hellowindow3.cpp  multiwin_mx.cpp  sdl.cpp
example/c++/multiwin_mx/: CMakeLists.txt  multiwin_mx.cpp
example/c/egl_x11/: CMakeLists.txt
example/c/vulkan_tri_glfw/: CMakeLists.txt  vulkan_tri_glfw.c
example/pascal/: sdl_glad.pas
example/rust/gl-glfw/: Cargo.toml  README.md  init.sh
example/rust/gl-glfw-mx/: Cargo.toml  README.md  init.sh
example/rust/gl-glfw-mx/src/: main.rs
example/rust/gl-glfw/src/: main.rs
glad/: __init__.py  __main__.py  config.py  documentation.py  egl.py  gl.d  gl.py  glenums.d  glext.d  gltypes.d  glx.py  loader.d  opener.py  parse.py  plugin.py  sink.py  spec.py  specification.py  util.py  version.py  wgl.py
glad/egl/: egl.d  enums.d  ext.d  loader.d  types.d
glad/files/: __init__.py  cl.xml  egl.xml  eglplatform.h  gl.xml  glx.xml  khrplatform.h  vk.xml  wgl.xml
glad/generator/: __init__.py  c.py  d.py  generator.py  util.py  volt.py
glad/generator/c/: __init__.py
glad/generator/c/templates/: base_template.c  base_template.h  cl.c  cl.h  egl.c  egl.h  gl.c  gl.h  glx.c  glx.h  header_only.h  impl_util.c  platform.h  template_utils.h  vk.c  vk.h  wgl.c  wgl.h
glad/generator/c/templates/loader/: egl.c  egl.h  gl.c  gl.h  gles1.c  gles1.h  gles2.c  gles2.h  glx.c  glx.h  library.c  opencl.c  opencl.h  vulkan.c  vulkan.h  wgl.c  wgl.h
glad/generator/d/: __init__.py
glad/generator/d/templates/: enumerations.d  functions.d  loader.d
glad/generator/d/templates/loader/: gl.d
glad/generator/d/templates/types/: glx.d
glad/generator/nim/: __init__.py
glad/generator/nim/templates/: impl.nim  nimble.nimble
glad/generator/nim/templates/types/: vk.nim
glad/generator/rust/: __init__.py
glad/generator/rust/templates/: Cargo.toml  gl.rs  impl.rs  lib.rs  template_utils.rs
glad/generator/rust/templates/types/: egl.rs  gl.rs  glx.rs  khrplatform.rs  vk.rs  wgl.rs
glad/generator/volt/: __init__.py
glad/generator/volt/templates/: functions.volt  loader.volt
glad/generator/volt/templates/loader/: gl.volt
glad/generator/zig/: __init__.py
glad/generator/zig/templates/: glad.zig
glad/gl/: enums.d  ext.d  funcs.d  gl.d  loader.d  types.d
glad/glad/egl/: all.d  egl.d  enums.d  ext.d  funcs.d  loader.d  types.d
glad/glad/gl/: all.d  enums.d  ext.d  funcs.d  gl.d  gles1.d  gles2.d  loader.d  types.d
glad/glad/glx/: all.d  enums.d  ext.d  funcs.d  glx.d  loader.d  types.d
glad/glad/wgl/: all.d  enums.d  ext.d  funcs.d  loader.d  types.d  wgl.d
glad/glx/: enums.d  ext.d  glx.d  loader.d  types.d
glad/lang/: __init__.py  generator.py
glad/lang/c/: __init__.py  debug.py  generator.py
glad/lang/c/loader/: __init__.py  egl.py  gl.py  glx.py  wgl.py
glad/lang/c/templates/: base_template.c  base_template.h  egl.c  egl.h  gl.c  gl.h  glx.c  glx.h  header_only.h  template_utils.h  wgl.c  wgl.h
glad/lang/common/: generator.py  loader.py  util.py
glad/lang/d/: __init__.py  generator.py
glad/lang/d/loader/: __init__.py  egl.py  gl.py  glx.py  wgl.py
glad/lang/d/templates/: functions.d  loader.d  types.d
glad/lang/nim/: __init__.py  generator.py
glad/lang/nim/loader/: __init__.py  egl.py  gl.py  glx.py  wgl.py
glad/lang/pascal/: __init__.py  generator.py
glad/lang/pascal/loader/: gl.py
glad/lang/volt/: __init__.py  generator.py
glad/lang/volt/loader/: __init__.py  egl.py  gl.py  glx.py  wgl.py
glad/lang/volt/templates/: enumerations.volt  functions.volt  loader.volt  package.volt  types.volt
glad/language/c/: __init__.py
glad/language/c/templates/: base_template.c  base_template.h  egl.c  egl.h  gl.c  gl.h  glx.c  header_only.h  template_utils.h  wgl.h
glad/language/d/: __init__.py
glad/language/volt/: __init__.py
glad/loader/: __init__.py  c.py  d.py  volt.py
glad/loader/egl/: __init__.py  c.py  d.py  volt.py
glad/loader/gl/: __init__.py  c.py  d.py  volt.py
glad/loader/glx/: __init__.py  c.py  d.py  volt.py
glad/loader/wgl/: __init__.py  c.py  d.py  volt.py
glad/spec/: __init__.py  egl.py  gl.py  glx.py  wgl.py
glad/wgl/: enums.d  ext.d  funcs.d  loader.d  types.d  wgl.d
include/glad/: glad.h  glad_egl.h  glad_glx.h  glad_wgl.h
lib/cmake/Glad/: GladConfig.cmake
src/: glad.c  glad_egl.c  glad_glx.c  glad_wgl.c
test/: README.md
test/c/cmake/: CMakeLists.txt  test_disabled.sh
test/c/parse/002/: test.c
test/c/parse/003/: test.c
test/c/parse/004/: test.c
test/parse/001/: test.c
test/run/gl/001/: test.c
tests/: README.md  test____main__.py
utility/: bump_version.sh  compiletest.sh  download.sh  examples.sh  generateall.sh  test.sh  updatesub.sh
(+186 files in other folders)
